# Service_Kuper_Example

./: .dockerignore  .env.docker  .env.docker.example  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  example.xlsx  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 5994220904a6_initial_migration_from_models.py  695ed86140ce_change_product_id_to_bigint.py  c38e0a36b483_initial_migration.py  ebd2f22c67bc_change_product_id_to_bigint.py  edf8ff69866e_initial_migration.py
src/: __init__.py
src/parser_api/: main.py
src/parser_api/api/: parser_router.py
src/parser_api/application/: excel_service.py  parser_factory.py  parser_registry.py  parsing_service.py  services.py
src/parser_api/common/: logging.py
src/parser_api/core/: di.py
src/parser_api/core/logging/: logging_config.py
src/parser_api/domain/: models.py
src/parser_api/infrastructure/config/: __init__.py  models.py  readers.py
src/parser_api/infrastructure/db/: uow.py
src/parser_api/infrastructure/db/models/: __init__.py  product.py
src/parser_api/infrastructure/db/repositories/: __init__.py  product.py
src/parser_api/infrastructure/dishka/: __init__.py  config.py  db.py  di.py  repositories.py
src/parser_api/infrastructure/factory/: parser_factory.py
src/parser_api/infrastructure/parsers/kuper/: kuper_parser.py
src/parser_api/infrastructure/parsers/kuper/utils/: category_fetch.py  helper.py
src/parser_api/infrastructure/parsers/ozon/: ozon_parser.py
src/parser_api/infrastructure/utils/: concurrency_utils.py
src/parser_api/schemas/: models.py  request_models.py
tests/: test_api.py  test_application.py  test_kuper.py
