[tool.poetry]
name = "service-kuper"
version = "0.1.0"
description = "Service for parsing kuper. Integration with fastapi"
authors = ["reddmonchick"]
readme = "README.md"
packages = [{include = "parser_api", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.3,<0.35.0"
pydantic = ">=2.11.5,<3.0.0"
dishka = ">=1.6.0,<2.0.0"
aiohttp = "^3.12.7"
tls-client = "^1.0.1"
structlog = "^25.4.0"
python-json-logger = "^3.3.0"
coloredlogs = "^15.0.1"

[tool.poetry.scripts]
start = "start.bat"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"