[tool.poetry]
name = "service-kuper"
version = "0.1.0"
description = "Service for parsing kuper. Integration with fastapi"
authors = ["reddmonchick"]
readme = "README.md"
packages = [{include = "parser_api", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.3,<0.35.0"
pydantic = ">=2.11.5,<3.0.0"
dishka = ">=1.6.0,<2.0.0"
aiohttp = "^3.12.7"
tls-client = "^1.0.1"
structlog = "^25.4.0"
python-json-logger = "^3.3.0"
coloredlogs = "^15.0.1"
pytest = "^8.4.1"
pandas = "^2.3.1"
openpyxl = "^3.1.5"
python-multipart = "^0.0.20"
dotenv = "^0.9.9"
environs = "^14.2.0"
async-tls-client = "^2.0.0"
sqlalchemy = "^2.0.42"
asyncpg = "^0.30.0"
alembic = "^1.16.4"
sqlalchemy-utils = "^0.41.2"
requests = "*"
pytest-asyncio = "*"
httpx = "*"


[tool.poetry.scripts]
start = "start.bat"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"